--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -52,11 +52,11 @@
 \include{ordering_and_preconditioning}
 \include{distributed_solver}
 
-%\include{ViennaCL.tex}
-%\include{future_of_gpus.tex}
-%\include{explicit_pde_solutions}
-%\include{implicit_pde_solutions}
-%\include{performance_analysis} 
+\include{ViennaCL.tex}
+\include{future_of_gpus.tex}
+\include{explicit_pde_solutions}
+\include{implicit_pde_solutions}
+\include{performance_analysis} 
 %\include{publications}
 
 %\include{conclusions}
