Nearly done with RCM

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,50 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-03 19:44:07 -0500 
+%% Created for Evan Bollig at 2013-09-10 03:28:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Gibbs1976,
+	Abstract = {A new algorithm for reducing the bandwidth and profile of a sparse matrix is described. Extensive testing on finite element matrices indicates that the algorithm typically produces bandwidth and profile which are comparable to those of the commonly-used reverse Cuthill-McKee algorithm, yet requires significantly less computation time.},
+	Author = {Gibbs, Norman E. and Poole, William G., Jr. and Stockmeyer, Paul K.},
+	Copyright = {Copyright {\copyright} 1976 Society for Industrial and Applied Mathematics},
+	Date-Added = {2013-09-10 08:28:11 +0000},
+	Date-Modified = {2013-09-10 08:28:17 +0000},
+	Issn = {00361429},
+	Journal = {SIAM Journal on Numerical Analysis},
+	Jstor_Articletype = {research-article},
+	Jstor_Formatteddate = {Apr., 1976},
+	Language = {English},
+	Number = {2},
+	Pages = {pp. 236-250},
+	Publisher = {Society for Industrial and Applied Mathematics},
+	Title = {An Algorithm for Reducing the Bandwidth and Profile of a Sparse Matrix},
+	Url = {http://www.jstor.org/stable/2156090},
+	Volume = {13},
+	Year = {1976},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/2156090}}
+
+@inproceedings{Cuthill1969,
+	Acmid = {805928},
+	Address = {New York, NY, USA},
+	Author = {Cuthill, E. and McKee, J.},
+	Booktitle = {Proceedings of the 1969 24th national conference},
+	Date-Added = {2013-09-10 05:08:54 +0000},
+	Date-Modified = {2013-09-10 05:09:02 +0000},
+	Doi = {10.1145/800195.805928},
+	Numpages = {16},
+	Pages = {157--172},
+	Publisher = {ACM},
+	Series = {ACM '69},
+	Title = {Reducing the bandwidth of sparse symmetric matrices},
+	Url = {http://doi.acm.org/10.1145/800195.805928},
+	Year = {1969},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/800195.805928},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/800195.805928}}
 
 @article{Stocco2009,
 	Author = {Stocco, L.J. and Schrack, G.},
